# init-shell

./: Cargo.toml  build.rs  justfile
clam/: Cargo.toml
clam/src/: lib.rs  logger.rs
clam/tests/: works.rs
init-shell/: Cargo.toml
init-shell/src/: main.rs
src/: lib.rs  logger.rs  main.rs
